--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 SUBDIRS = src
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = BUILD.bazel WORKSPACE.bazel .bazelrc
+EXTRA_DIST = AUTHORS CONTRIBUTING LICENSE NEWS README.md WORKSPACE.bazel BUILD.bazel .bazelrc
