--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -28,19 +28,19 @@ http_archive(
 
 http_archive(
     name = "com_google_googletest",
-    strip_prefix = "googletest-master",
-    urls = ["https://github.com/google/googletest/archive/master.zip"],
+    strip_prefix = "googletest-main",
+    urls = ["https://github.com/google/googletest/archive/main.zip"],
 )
 
-# ------------------------------------------------------------------------------
-# OpenFst:
-# ------------------------------------------------------------------------------
-openfst_version = "1.8.1"
+# -------------------------------------------------------------------------
+# OpenFst: See
+#    http://www.openfst.org/twiki/pub/FST/FstDownload/README
+# -------------------------------------------------------------------------
+openfst_version = "1.8.2"
 
 http_archive(
     name = "org_openfst",
-    urls = ["http://www.openfst.org/twiki/pub/FST/FstDownload/openfst-%s.tar.gz"
-            % openfst_version],
-    sha256 = "24fb53b72bb687e3fa8ee96c72a31ff2920d99b980a0a8f61dda426fca6713f0",
+    urls = ["https://www.openfst.org/twiki/pub/FST/FstDownload/openfst-%s.tar.gz" % openfst_version],
+    sha256 = "de987bf3624721c5d5ba321af95751898e4f4bb41c8a36e2d64f0627656d8b42",
     strip_prefix = "openfst-%s" % openfst_version,
 )
